adds js functionality to display a response depending on the value of the form inputs, utilizing branching
Co-authored-by: Ian Gregg <iangregg188@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <p>The results from this survey are not based in any science, and are merely opinions of some random people on the internet.</p>
     </div>
 
-    <form>
+    <form id="politics">
       <div class="form-group">
         <h4>Should there be more or less "government"?</h4>
         <select class="form-control" id="moreOrLess">
-          <option>less government</option>
-          <option>50/50</option>
-          <option>more government</option>
+          <option value="2">less government</option>
+          <option value="1">50/50</option>
+          <option value="0">more government</option>
         </select>
 
         <h4>Should there be more or less guns?</h4>
@@ -58,6 +58,10 @@
 
     <div class ="liberal">
       <p>It is our opinion that you are a liberal!</p>
+    </div>
+
+    <div class ="unknown">
+      <p>It is our opinion that you are an unknown!</p>
     </div>
 
   </div>
